Found and fixed what was causing horizontal scroll bar

--- a/css/index.css
+++ b/css/index.css
@@ -251,6 +251,35 @@ img {
   font-size: 1.6rem;
   padding: 20px;
 }
+/* ----------------------------------------------
+ * Generated by Animista on 2019-4-15 15:56:29
+ * w: http://animista.net, t: @cssanimista
+ * ---------------------------------------------- */
+/**
+ * ----------------------------------------
+ * animation scale-up-center
+ * ----------------------------------------
+ */
+@-webkit-keyframes scale-up-center {
+  0% {
+    -webkit-transform: scale(0.5);
+    transform: scale(0.5);
+  }
+  100% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
+}
+@keyframes scale-up-center {
+  0% {
+    -webkit-transform: scale(0.5);
+    transform: scale(0.5);
+  }
+  100% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
+}
 .home .intro {
   padding: 90px 0 10px;
   border-bottom: 2px dashed blue;
@@ -386,10 +415,23 @@ img {
 }
 .card-deck {
   padding: 0px 100px 100px 100px;
+  margin: 0;
+  -webkit-animation: scale-up-center 0.4s cubic-bezier(0.39, 0.575, 0.565, 1) both;
+  animation: scale-up-center 0.4s cubic-bezier(0.39, 0.575, 0.565, 1) both;
+}
+.card:hover {
+  -webkit-animation: scale-up-center 0.4s cubic-bezier(0.39, 0.575, 0.565, 1) both;
+  animation: scale-up-center 0.4s cubic-bezier(0.39, 0.575, 0.565, 1) both;
 }
 .intro .gamesIntro {
   padding: 0px 50px 0px 50px;
 }
 .intro .gamesIntro h2 a {
   font-size: 1.2rem;
+}
+.slide-content .scroller {
+  width: 1024px;
+}
+* {
+  border: 1px solid #f00 !important;
 }
